# Embedded_C_Training

./: .gitignore  PROJECT_STRUCTURE.md  README.md
STM32/: README.md
STM32/Template_NucleoF413ZH/: CMakeLists.txt  README.md
STM32/Template_NucleoF413ZH/App/inc/: main.h
STM32/Template_NucleoF413ZH/App/src/: main.c  stm32f4xx_it.c  syscalls.c
STM32/Template_NucleoF413ZH/cmake/: stm32_gcc.cmake
STM32/Week_1/: CMakeLists.txt  PROJECT_STRUCTURE.md  README.md  STM32F413XX_FLASH.ld  Template.ioc
STM32/Week_1/App/inc/: main.h
STM32/Week_1/App/src/: main.c  stm32f4xx_it.c
STM32/Week_1/cmake/: stm32_gcc.cmake
STM32/Week_1/docs/: day1_type_sizes.md
